crates/cosh-sdk/src/term_screen/core/test/snapshots/cosh_sdk__term_screen__core__test__semantic-2.snap
---
source: crates/cosh-sdk/src/term_screen/core/test/mod.rs
expression: term.get_semantic_zones().unwrap()
---
[
    SemanticZone {
        start_y: 0,
        start_x: 0,
        end_y: 2,
        end_x: 4,
        semantic_type: Output,
    },
    SemanticZone {
        start_y: 3,
        start_x: 0,
        end_y: 3,
        end_x: 1,
        semantic_type: Prompt,
    },
    SemanticZone {
        start_y: 3,
        start_x: 2,
        end_y: 3,
        end_x: 6,
        semantic_type: Input,
    },
    SemanticZone {
        start_y: 4,
        start_x: 0,
        end_y: 4,
        end_x: 8,
        semantic_type: Output,
    },
]
