crates/cosh-sdk/src/term_screen/core/test/snapshots/cosh_sdk__term_screen__core__test__semantic.snap
---
source: crates/cosh-sdk/src/term_screen/core/test/mod.rs
expression: term.get_semantic_zones().unwrap()
---
[
    SemanticZone {
        start_y: 0,
        start_x: 0,
        end_y: 2,
        end_x: 4,
        semantic_type: Output,
    },
]
