crates/cosh-sdk/src/term_screen/core/test/snapshots/cosh_sdk__term_screen__core__test__semantic_1539.snap
---
source: crates/cosh-sdk/src/term_screen/core/test/mod.rs
expression: term.get_semantic_zones().unwrap()
---
[
    SemanticZone {
        start_y: 0,
        start_x: 0,
        end_y: 0,
        end_x: 5,
        semantic_type: Input,
    },
    SemanticZone {
        start_y: 1,
        start_x: 0,
        end_y: 1,
        end_x: 3,
        semantic_type: Output,
    },
]
